# piper-blockchain

./: .env.example  .gitignore  LICENSE  Makefile
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  crypto.py  deps.py  main.py
backend/app/models/: orm.py  schemas.py
backend/app/routers/: admin.py  blocks.py  config.py  transactions.py  users.py  wallets.py
backend/app/services/: block.py  config.py  transaction.py  user.py  wallet.py
frontend/: .prettierignore  eslint.config.js  index.html  openapi.json  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AddressSelector.tsx  AppShell.tsx  Modal.tsx  TransactionDetailView.tsx  TransactionTable.tsx  TruncatedAddress.tsx
frontend/src/contexts/: ConfigContext.tsx  ProfileContext.tsx  ToastContext.tsx
frontend/src/hooks/: useCoins.ts
frontend/src/lib/: crypto.ts
frontend/src/pages/: BalancesPage.tsx  BlockchainPage.tsx  ConfigPage.tsx  MinePage.tsx  SendPage.tsx  UsersPage.tsx
