[project]
name = "piper-backend"
version = "0.1.0"
description = "Piper Blockchain Backend"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "bcrypt>=5.0.0",
    "black>=26.5.1",
    "ecdsa>=0.19.2",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "isort>=8.0.1",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
